Initial test changes and reliability changes