@@ -3,7 +3,6 @@ package com.dpw.runner.shipment.services.dao.impl;
 import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.UserContext;
 import com.dpw.runner.shipment.services.dto.request.UsersDto;
 import com.dpw.runner.shipment.services.entity.BookingCarriage;
-import com.dpw.runner.shipment.services.entity.TruckDriverDetails;
 import com.dpw.runner.shipment.services.exception.exceptions.RunnerException;
 import com.dpw.runner.shipment.services.exception.exceptions.ValidationException;
 import com.dpw.runner.shipment.services.helper.JsonTestUtility;
@@ -24,7 +23,6 @@ import org.mockito.MockitoAnnotations;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.dao.DataRetrievalFailureException;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 
@@ -70,7 +68,6 @@ class BookingCarriageDaoTest {
     void save_ValidBookingCarriage_ReturnsSavedBookingCarriage() {
         BookingCarriage bookingCarriage = new BookingCarriage();
         when(jsonHelper.convertToJson(any())).thenReturn("");
-        Set<String> set = Set.of("abcd", "defg");
         when(validatorUtility.applyValidation(anyString(), anyString(), any(), anyBoolean())).thenReturn(Collections.emptySet());
         when(bookingCarriageRepository.save(any(BookingCarriage.class))).thenReturn(bookingCarriage);
 
@@ -251,38 +248,26 @@ class BookingCarriageDaoTest {
     }
 
     @Test
-    void saveEntityFromShipment_ExceptionThrown_ReturnsEmptyList() throws RunnerException, NoSuchFieldException, JsonProcessingException, InvocationTargetException, IllegalAccessException, NoSuchMethodException {
+    void saveEntityFromShipment_ExceptionThrown_ReturnsEmptyList() {
         Long shipmentId = 1L;
         testData.setId(1L);
-        List<BookingCarriage> bookingCarriages = Arrays.asList(testData);
+        List<BookingCarriage> bookingCarriages = List.of(testData);
         when(bookingCarriageDao.findById(anyLong())).thenReturn(Optional.of(testData));
         doThrow(IllegalArgumentException.class).when(jsonHelper).convertToJson(any());
         assertThrows(Exception.class, () -> bookingCarriageDao.saveEntityFromShipment(bookingCarriages, shipmentId));
     }
 
-//    @Test
-//    void saveEntityFromShipment_BookingCarriagesListHasElements_ReturnsPopulatedList() {
-//        Long shipmentId = 1L;
-//        List<BookingCarriage> bookingCarriages = Arrays.asList(new BookingCarriage(), new BookingCarriage());
-//        when(bookingCarriageDao.findById(anyLong())).thenReturn(Optional.of(new BookingCarriage()));
-//        when(bookingCarriageDao.save(any())).thenReturn(new BookingCarriage());
-//        List<BookingCarriage> result = bookingCarriageDao.saveEntityFromShipment(bookingCarriages, shipmentId);
-//        assertNotNull(result);
-//        assertFalse(result.isEmpty());
-//        assertEquals(bookingCarriages.size(), result.size());
-//    }
-
     @Test
     void delete_ValidBookingCarriage_ThrowsException() {
         doThrow(new RuntimeException("test")).when(jsonHelper).convertToJson(any(BookingCarriage.class));
-        bookingCarriageDao.deleteBookingCarriage(Map.of(1L , testData),"bookingCarriage", 1L);
+        assertDoesNotThrow(() ->bookingCarriageDao.deleteBookingCarriage(Map.of(1L , testData),"bookingCarriage", 1L));
     }
 
     @Test
     void saveEntityFromShipmentEntityNotPresent() {
         BookingCarriage bookingCarriage = new BookingCarriage();
         bookingCarriage.setId(1L);
-        List<BookingCarriage> bookingCarriageList = Arrays.asList(bookingCarriage);
+        List<BookingCarriage> bookingCarriageList = List.of(bookingCarriage);
 
         when(bookingCarriageRepository.findById(any())).thenReturn(Optional.empty());
         assertThrows(DataRetrievalFailureException.class,() -> bookingCarriageDao.saveEntityFromShipment(bookingCarriageList, 1L));
@@ -292,8 +277,9 @@ class BookingCarriageDaoTest {
     void saveEntityFromShipmentMapNotContainsId() {
         BookingCarriage bookingCarriage = new BookingCarriage();
         bookingCarriage.setId(1L);
-        List<BookingCarriage> bookingCarriageList = Arrays.asList(bookingCarriage);
-        assertThrows(DataRetrievalFailureException.class,() -> bookingCarriageDao.saveEntityFromShipment(bookingCarriageList, 1L, new HashMap<>()));
+        List<BookingCarriage> bookingCarriageList = List.of(bookingCarriage);
+        Map<Long, BookingCarriage> oldEntityMap = new HashMap<>();
+        assertThrows(DataRetrievalFailureException.class,() -> bookingCarriageDao.saveEntityFromShipment(bookingCarriageList, 1L, oldEntityMap));
     }
 
     @Test
@@ -308,9 +294,9 @@ class BookingCarriageDaoTest {
         mockUser.setUsername("user");
         UserContext.setUser(mockUser);
         when(jsonHelper.convertToJson(any())).thenReturn("");
-        when(bookingCarriageRepository.saveAll(any())).thenReturn(Arrays.asList(bookingCarriage));
+        when(bookingCarriageRepository.saveAll(any())).thenReturn(List.of(bookingCarriage));
 
-        List<BookingCarriage> bookingCarriageList = Arrays.asList(bookingCarriage);
+        List<BookingCarriage> bookingCarriageList = List.of(bookingCarriage);
         assertEquals(bookingCarriageList, bookingCarriageDao.saveEntityFromShipment(bookingCarriageList, 1L, map));
     }
 }
